--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -11071,6 +11071,22 @@ span.rental-price-varies {
   font-size: 0.87em;
 }
 
+.rental-metafield-message {
+  position: absolute;
+  bottom: 0px; /* Adjust this value according to your design */
+  left: 0;
+  width: 100%;
+  text-align: center; /* Adjust alignment if needed */
+  background-color: $colorBtnPrimary;
+  color: #fff;
+  padding: 10px;
+}
+
+.rental-metafield-message p {
+  margin: 0px;
+  font-size: 0.87em;
+}
+
 .product-rental-pricing-disclaimer {
   text-align: center;
   font-size: .87em;
