Add Rental Tag Messaging

--- a/snippets/rental-grid-item.liquid
+++ b/snippets/rental-grid-item.liquid
@@ -252,7 +252,7 @@
           {% endif %}
           
           {% if metafield_match_1 %}
-            <div class="rental-metafield-message" style="background-color: {{ settings.rental_metafield_message_color }};">
+            <div class="rental-metafield-message">
               <p {% if section.settings.capitalize_pricing_text %}style="text-transform: uppercase;"{% endif %}>{{ settings.rental_metafield_message_1 }}</p>
             </div>
             {% assign metafield_message_displayed = true %}
@@ -286,7 +286,7 @@
           {% endif %}
           
           {% if metafield_match_2 %}
-            <div class="rental-metafield-message" style="background-color: {{ settings.rental_metafield_message_color }};">
+            <div class="rental-metafield-message">
               <p {% if section.settings.capitalize_pricing_text %}style="text-transform: uppercase;"{% endif %}>{{ settings.rental_metafield_message_2 }}</p>
             </div>
             {% assign metafield_message_displayed = true %}
@@ -320,7 +320,7 @@
           {% endif %}
           
           {% if metafield_match_3 %}
-            <div class="rental-metafield-message" style="background-color: {{ settings.rental_metafield_message_color }};">
+            <div class="rental-metafield-message">
               <p {% if section.settings.capitalize_pricing_text %}style="text-transform: uppercase;"{% endif %}>{{ settings.rental_metafield_message_3 }}</p>
             </div>
             {% assign metafield_message_displayed = true %}
@@ -354,7 +354,7 @@
           {% endif %}
           
           {% if metafield_match_4 %}
-            <div class="rental-metafield-message" style="background-color: {{ settings.rental_metafield_message_color }};">
+            <div class="rental-metafield-message">
               <p {% if section.settings.capitalize_pricing_text %}style="text-transform: uppercase;"{% endif %}>{{ settings.rental_metafield_message_4 }}</p>
             </div>
             {% assign metafield_message_displayed = true %}
@@ -388,7 +388,7 @@
           {% endif %}
           
           {% if metafield_match_5 %}
-            <div class="rental-metafield-message" style="background-color: {{ settings.rental_metafield_message_color }};">
+            <div class="rental-metafield-message">
               <p {% if section.settings.capitalize_pricing_text %}style="text-transform: uppercase;"{% endif %}>{{ settings.rental_metafield_message_5 }}</p>
             </div>
             {% assign metafield_message_displayed = true %}
