--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -39,7 +39,7 @@
             </ul>
             {% else %}
             <ul>
-
+            {% unless settings.nmr_local %}
               {% if section.settings.show_phone %}
               <li><a style="color:{{ section.settings.announcement_text_color }};" href="tel:{{ section.settings.header_phone | escape }}"><span class="fa-solid fa-phone"></span>&nbsp;{{ section.settings.header_phone }}</a></li>
               {% else %}{% endif %}
@@ -49,7 +49,7 @@
               {% if section.settings.show_locations %}
               <li><a style="color:{{ section.settings.announcement_text_color }};" href="{{ section.settings.header_locations | escape }}"><span class="fa-solid fa-location-dot"></span>&nbsp;{{ section.settings.header_locations_title }}</a></li>
               {% else %}{% endif %}
-
+            {% endunless %}
             </ul>
             {% endif %}
             {% comment %}
@@ -235,7 +235,7 @@
           <div id="mighty-location-selector" style="width: 100%;"></div>
         </div>
         <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2" async></script>
-      {% endif %}
+      {% endif %}   
 
       <div class="flex-item" style="display: flex; flex-direction: column; vertical-align: middle;" id="ecom2-account-cart">      
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
@@ -370,13 +370,12 @@
     {% endif %}
   </div>
   </div>  
-
-  {% unless settings.nmr_local %}
+  {% if settings.nmr_local %}
     <!-- Mobile Location Selector -->
     <div id="mobile-location-selector" class="mobile-location-container" style="padding: 10px 15px; background-color: #f8f9fa; border-bottom: 1px solid #e9ecef;">
-      <div id="mighty-location-selector-mobile" style="width: 100%;"></div> 
+      <div id="mighty-location-selector-mobile" style="width: 100%;"></div>
     </div>
-  {% endunless %}
+  {% endif %}
   
   {% unless section.settings.hide_search_bar or page.template_suffix contains 'dalp' %}
   <div id="ecom-mobile-search">
