--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -307,7 +307,7 @@ Modify at your own peril, a broken website is the likely result.
 		{% endunless %}
       </div>
       {%if settings.nmr_local %}
-        <div class="grid-item medium-down--hide large--one-quarter text-center large--text-right">
+        <div class="grid-item medium-down--hide large--one-quarter text-center large--text-right" style="margin-left: 10px;">
             <div id="mighty-location-selector"></div>
             <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
         </div>
