--- a/snippets/ecom-header.liquid
+++ b/snippets/ecom-header.liquid
@@ -279,6 +279,13 @@
           </div>
         {% endif %}
 
+        {%if settings.nmr_local %}
+        <div class="grid-item medium-down--hide large--one-quarter text-center large--text-right" style="padding-left: 10px;">
+            <div id="mighty-location-selector"></div>
+            <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+        </div>
+      {% endif %}
+      
       </div>
     </div>
   </div>
