--- a/snippets/ecom-header.liquid
+++ b/snippets/ecom-header.liquid
@@ -228,6 +228,7 @@
       {% endunless %}
       
       <div class="grid-item medium-down--hide large--one-third text-right">
+        <div class="header-right-elements" style="display: flex; align-items: center; justify-content: flex-end; gap: 15px;">
        
         {% if shop.customer_accounts_enabled %}
           <div class="site-header--text-links" id="ecom-header-text-links">
@@ -276,15 +277,14 @@
     		<span class="cart-count cart-badge--desktop">{{ cart.item_count }}</span>
           </a>
         {% endunless %}
-          </div>
-        {% endif %}
 
         {%if settings.nmr_local %}
-        <div class="grid-item medium-down--hide large--one-quarter text-center large--text-right" style="padding-left: 10px;">
-            <div id="mighty-location-selector"></div>
-            <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
+          <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+        {% endif %}
+          </div>
         </div>
-      {% endif %}
+        {% endif %}
       
       </div>
     </div>
