--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -410,12 +410,19 @@ Modify at your own peril, a broken website is the likely result.
         {% include 'search-bar' %}
 		{% endunless %}
    
-		{% unless section.settings.hide_shopping_links %}
+        {% unless section.settings.hide_shopping_links %}
         <a href="{{ routes.cart_url }}" class="header-cart-btn cart-toggle">
           <span class="icon icon-cart"></span>
           {{ 'layout.cart.cart' | t }} <span class="cart-count cart-badge--desktop {% if cart.item_count == 0 %}hidden-count{% endif %}">{{ cart.item_count }}</span>
         </a>
         {% endunless %}
+
+        {%if settings.nmr_local %}
+          <div class="text-center" style="margin-top: 10px;">
+            <div id="mighty-location-selector"></div>
+            <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+          </div>
+        {% endif %}
       </div>
     </div>
     
