--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -317,7 +317,7 @@ Modify at your own peril, a broken website is the likely result.
     {% elsif section.settings.logo_alignment == "logo_center" %}
     
     <div class="logo-center">
-      <div class="logo-center-wrap">
+      <div class="logo-center-wrap" style="display: flex; align-items: center; justify-content: center; position: relative;">
         {% if request.page_type == 'index' %}
           <h1 class="header-logo text-center" itemscope itemtype="http://schema.org/Organization">
         {% else %}
@@ -379,6 +379,13 @@ Modify at your own peril, a broken website is the likely result.
         {% else %}
           </div>
         {% endif %}
+        
+        {%if settings.nmr_local %}
+          <div style="position: absolute; right: 0; top: 50%; transform: translateY(-50%); max-width: 200px;" class="medium-down--hide">
+            <div id="mighty-location-selector"></div>
+            <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+          </div>
+        {% endif %}
       </div>
 
         <div class="text-center search-center">
@@ -418,8 +425,8 @@ Modify at your own peril, a broken website is the likely result.
         {% endunless %}
 
         {%if settings.nmr_local %}
-          <div class="text-center" style="margin-top: 10px;">
-            <div id="mighty-location-selector"></div>
+          <div class="text-center large--hide" style="margin-top: 10px;">
+            <div id="mighty-location-selector-mobile"></div>
             <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
           </div>
         {% endif %}
