--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -381,7 +381,7 @@ Modify at your own peril, a broken website is the likely result.
         {% endif %}
         
         {%if settings.nmr_local %}
-          <div style="position: absolute; left: 0; top: 50%; transform: translateY(-50%); max-width: 200px;" class="medium-down--hide">
+          <div style="position: absolute; left: 20px; top: 50%; transform: translateY(-50%); max-width: 200px;" class="medium-down--hide">
             <div id="mighty-location-selector"></div>
             <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
           </div>
